k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-learning
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-learning
  template:
    metadata:
      labels:
        app: k8s-learning
    spec:
      containers:
        - name: api
          image: kabu03/k8s-learning:v0.1
          ports:
            - containerPort: 8000
