k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-learning-service
spec:
  type: ClusterIP
  selector:
    app: k8s-learning
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
