k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-learning-ingress
spec:
  rules:
    - host: k8s-learning.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # This is the FastAPI Service name (kubectl get svc)
                name: k8s-learning-service
                port:
                  number: 8000
